kubernetes/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: uni-tracker
    component: frontend
  ports:
    - protocol: TCP
      port: 443
      targetPort: 3000
  type: ClusterIP
